--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,126 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/basicBackgroundColor"
-                tools:context=".feature.auth.frag.LoginFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".feature.auth.frag.LoginFragment">
 
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/btnClose"-->
-    <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
-    <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:layout_marginTop="@dimen/basic_margin_padding"-->
-    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-    <!--android:paddingStart="@dimen/activity_horizontal_margin"-->
-    <!--android:text="@string/login"-->
-    <!--android:textSize="@dimen/text_size_very_large"-->
-    <!--android:fontFamily="@string/font_family_regular"-->
-    <!--android:textStyle="bold"-->
-    <!--/>-->
+    <ImageButton
+        android:id="@+id/btnClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="start"
+        android:layout_marginStart="@dimen/basic_margin_padding"
+        android:layout_marginLeft="@dimen/basic_margin_padding"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:animateLayoutChanges="true"
+        android:background="@color/basicBackgroundColor"
+        android:padding="@dimen/activity_horizontal_margin"
+        app:srcCompat="@drawable/ic_close" />
 
-    <ImageView android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_centerHorizontal="true"
-               app:srcCompat="@drawable/ic_sunmed_title"
-               android:layout_above="@+id/layoutContainer"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnClose"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/basic_margin_padding"
+        android:fontFamily="@string/font_family_regular"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/login"
+        android:textSize="@dimen/text_size_very_large"
+        android:textStyle="bold" />
 
     <RelativeLayout
-            android:id="@+id/layoutContainer"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:padding="@dimen/activity_horizontal_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/editTextUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_vertical">
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/user_name" />
 
             <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editTextICNumber"
-                    android:layout_marginBottom="@dimen/basic_margin_padding"
-                    android:inputType="number"
-                    android:hint="@string/user_ic_number"/>
-
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editTextPassword"
-                    android:layout_marginBottom="@dimen/basic_margin_padding"
-                    android:inputType="textPassword"
-                    android:hint="@string/password"/>
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
 
             <Button
-                    android:id="@+id/login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/basic_margin_padding"
-                    android:layout_marginStart="@dimen/basic_margin_padding"
-                    android:layout_marginLeft="@dimen/basic_margin_padding"
-                    android:layout_marginEnd="@dimen/basic_margin_padding"
-                    android:layout_marginRight="@dimen/basic_margin_padding"
-                    android:paddingBottom="@dimen/basic_margin_padding"
-                    android:paddingTop="@dimen/basic_margin_padding"
-                    android:text="@string/login"
-                    android:textColor="@color/titleTextColorReverse"
-                    android:textAllCaps="true"
-                    android:background="@drawable/rounder_corner_dark"/>
-
-            <Button
-                    android:id="@+id/forgotPassword"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/forgot_password"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:background="@drawable/button_normal"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:textSize="@dimen/text_size_small"
-            />
-
+                android:id="@+id/login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/basic_margin_padding"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/basic_margin_padding"
+                android:paddingBottom="@dimen/basic_margin_padding"
+                android:text="@string/login"
+                android:textAllCaps="true"
+                />
 
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/basic_margin_padding"
-                    android:layout_marginStart="@dimen/activity_horizontal_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/basic_margin_padding">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/basic_margin_padding"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:orientation="horizontal">
+
                 <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/new_user"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/new_user" />
 
                 <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/btnRegister"
-                        android:text="@string/register"
-                        android:textStyle="bold"
-                        android:background="@drawable/rounded_corner_button"/>
+                    android:id="@+id/btnRegister"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="@string/register"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
-
-    <ImageView android:layout_width="100dp"
-               android:layout_height="60dp"
-               android:layout_centerHorizontal="true"
-               app:srcCompat="@mipmap/sunmed_title"
-               android:layout_below="@+id/layoutContainer"/>
 
 </RelativeLayout>
