--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,155 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:color="@color/basicBackgroundColor"
->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:color="@color/basicBackgroundColor"
+    tools:context=".feature.auth.frag.LoginFragment">
+
+    <ImageButton
+        android:id="@+id/btnClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="start"
+        android:layout_marginStart="@dimen/basic_margin_padding"
+        android:layout_marginLeft="@dimen/basic_margin_padding"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:animateLayoutChanges="true"
+        android:background="@color/basicBackgroundColor"
+        android:padding="@dimen/activity_horizontal_margin"
+        app:srcCompat="@drawable/ic_close" />
 
     <TextView
-            android:gravity="left"
-            android:layout_alignParentTop="true"
-            android:textSize="@dimen/text_size_medium"
-            android:id="@+id/txtViewRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/top_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnClose"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/basic_margin_padding"
+        android:fontFamily="@string/font_family_regular"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:text="@string/register"
+        android:textSize="@dimen/text_size_very_large"
+        android:textStyle="bold" />
 
-            android:textColor="@android:color/black"
-            android:text="@string/register_title"
-    />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:padding="@dimen/basic_margin_padding">
 
-    <ScrollView
-            android:layout_below="@+id/txtViewRegister"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/layoutContainer"
-    >
-        <RelativeLayout
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:padding="@dimen/basic_margin_padding"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/editTextUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-        >
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/user_name" />
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
+
+            <EditText
+                android:id="@+id/editTextConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/password_confirm"
+                android:inputType="textPassword" />
+
+            <EditText
+                android:id="@+id/editTextMail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:hint="@string/mail"
+                android:inputType="textEmailAddress" />
+
+
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/basic_margin_padding"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/basic_margin_padding"
+                android:paddingBottom="@dimen/basic_margin_padding"
+                android:text="@string/register"
+                 />
 
             <LinearLayout
-                    android:layout_width="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/basic_margin_padding"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/basic_margin_padding"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical">
-
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editTextName"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:hint="@string/name"/>
-
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editTextICNumber"
-                        android:inputType="number"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:hint="@string/user_ic_number"/>
-
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editTextMail"
-                        android:inputType="textEmailAddress"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:hint="@string/mail"/>
-
-
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editTextPhoneNumber"
-                        android:inputType="phone"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:hint="@string/phone"/>
-
-                <RadioGroup
-                        android:visibility="gone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:id="@+id/radioBtnGender">
-                    <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/male"/>
-                    <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/female"/>
-                    <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/other"/>
-                </RadioGroup>
-
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editTextPassword"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:inputType="textPassword"
-                        android:hint="@string/password"/>
-
-                <EditText
-                        android:visibility="invisible"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:id="@+id/editTextConfirmPassword"
-                        android:layout_marginBottom="@dimen/basic_margin_padding"
-                        android:hint="@string/password_confirm"/>
-
+                    android:text="@string/old_user" />
 
                 <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/btnProceed"
-                        android:text="@string/proceed"
-                        android:background="@drawable/rounder_corner_dark"
-                        android:paddingBottom="@dimen/basic_margin_padding"
-                        android:textColor="@color/titleTextColorReverse"
-                        android:paddingTop="@dimen/basic_margin_padding"
-                        android:layout_marginTop="@dimen/basic_margin_padding"
-                        android:layout_marginStart="@dimen/activity_horizontal_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-                <LinearLayout
-                        android:visibility="gone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="@dimen/basic_margin_padding"
-                        android:layout_marginStart="@dimen/activity_horizontal_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginBottom="@dimen/basic_margin_padding">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/old_user"/>
-                    <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/btnLogin"
-                            android:text="@string/login"
-                            android:textStyle="bold"
-                            android:background="@android:color/transparent"/>
-                </LinearLayout>
-
-
+                    android:id="@+id/btnLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="@string/login"
+                    android:textStyle="bold" />
             </LinearLayout>
 
-        </RelativeLayout>
-    </ScrollView>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 </RelativeLayout>
