--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -78,8 +78,7 @@
                 android:paddingTop="@dimen/basic_margin_padding"
                 android:paddingBottom="@dimen/basic_margin_padding"
                 android:text="@string/login"
-                android:textAllCaps="true"
-                />
+                android:textAllCaps="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
